docker build test

--- a/httpsvr/Dockerfile
+++ b/httpsvr/Dockerfile
@@ -1,16 +1,16 @@
 FROM golang:1.17 AS build
-WORKDIR /httpsvr/
+WORKDIR /httpsvr
 COPY . .
-ENV CGO_ENABLED=0
-ENV GO111MODULE=on
-ENV GOPROXY=https://goproxy.cn,direct
-RUN GOOS=linux go build -installsuffix cgo -o httpsvr main.go
+ENV CGO_ENABLED=0 \
+    GO111MODULE=auto \
+	GOOS=linux \
+	GOARCH=amd64 \
+	GOPROXY=https://goproxy.cn,direct
+RUN go build -o httpsvr main.go
 
-FROM busybox
-COPY --from=build /httpsvr/httpsvr /httpsvr/httpsvr
+FROM scratch
+COPY --from=build /httpsvr/httpsvr /
 EXPOSE 8080
-ENV ENV local
-WORKDIR /httpsvr/
-ENTRYPOINT ["./httpsvr"]
+ENTRYPOINT ["/httpsvr"]
 
 
