--- a/module10/httpsvr/Makefile
+++ b/module10/httpsvr/Makefile
@@ -5,13 +5,13 @@ root:
 	export ROOT=github.com/ericjwzhang/learn_cloud_native/module10/httpsvr
 
 build:
-	echo "building httpserver binary"
+	echo "building httpsvr binary"
 	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=auto go build -o httpsvr .
 
-release: build
-	echo "building httpserver container"
+release:
+	echo "building httpsvr container"
 	docker build -t ericjwzhang/httpsvr:${tag} .
 
 push: release
-	echo "pushing ericjwzhang/httpserver"
+	echo "pushing ericjwzhang/httpsvr"
 	docker push ericjwzhang/httpsvr:${tag}
